# interactive-seg-gui

./: .env  .gitignore  GUI.py  README.md  constants.py  data_model.py  deep_feat_interop.py  isb_cfg.json  main.py  pyproject.toml  yoeo_interop.py
extensions/: umap_.py
gui_elements/: constants.py  interactive_canvas.py  umap_widget.py  zoomable_canvas.py
